Prevent text wrapping in Roles table, so row height doesn't change when opening the editor

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -900,6 +900,7 @@ input.date {
     td {
         padding: 6px 12px !important;
         border-left: 1px solid #d6d6d6;
+        white-space: nowrap;
     }
     a {
         cursor: pointer;
